# iotcraft

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
desktop-client/: Cargo.toml  MULTI_CLIENT.md  README.md  build.rs
desktop-client/.cargo/: config.toml
desktop-client/ctask/: Cargo.toml  README.md
desktop-client/ctask/src/: infrastructure.rs  main.rs
desktop-client/docs/: MCP_API_SYNC.md  MCP_INTEGRATION.md  MCP_TESTING.md  SCENARIOS.md  SCENARIO_FORMAT.md  z-axis-positioning.md
desktop-client/firmwares/esp32-s3-dhcp-gateway/: firmware.toml
desktop-client/localization/bg-BG/: main.ftl
desktop-client/localization/cs-CZ/: main.ftl
desktop-client/localization/de-DE/: main.ftl
desktop-client/localization/en-US/: main.ftl
desktop-client/localization/es-ES/: main.ftl
desktop-client/localization/fr-FR/: main.ftl
desktop-client/localization/hr-HR/: main.ftl
desktop-client/localization/hu-HU/: main.ftl
desktop-client/localization/it-IT/: main.ftl
desktop-client/localization/ja-JP/: main.ftl
desktop-client/localization/pl-PL/: main.ftl
desktop-client/localization/pt-BR/: main.ftl
desktop-client/localization/ro-RO/: main.ftl
desktop-client/localization/sk-SK/: main.ftl
desktop-client/localization/sl-SI/: main.ftl
desktop-client/localization/zh-CN/: main.ftl
desktop-client/scenarios/: environment_setup.ron  simple_test.json  simple_test.ron  two_player_world_sharing.json
desktop-client/scripts/: background_world.txt  house.txt  init_world.txt  new_world.txt  room.txt  test_map.txt
desktop-client/scripts/world_templates/: creative.txt  medieval.txt  modern.txt
desktop-client/src/: camera_controllers.rs  console_web.rs  discovery.rs  lib.rs  lib_debug.rs  lib_gradual.rs  main.rs  minimap.rs  multiplayer.rs  multiplayer_web.rs  performance_optimizations.md  physics_manager.rs  player_avatar.rs  player_controller.rs  profile.rs  scenario_types.rs  script_web.rs  shared_materials.rs  wasm_limits.rs  web_menu.rs  web_player_controller.rs
desktop-client/src/config/: mod.rs
desktop-client/src/console/: bevy_ui_console.rs  block_creation_tests.rs  command_parser.rs  console_helpers.rs  console_infrastructure.rs  console_plugin.rs  console_systems.rs  console_trait.rs  console_types.rs  console_types_web.rs  esc_handling.rs  mod.rs  shared.rs  simple_console.rs  web_console.rs
desktop-client/src/debug/: debug_commands.rs  debug_params.rs  mod.rs
desktop-client/src/devices/: device_helpers.rs  device_positioning.rs  device_systems.rs  device_types.rs  mod.rs
desktop-client/src/environment/: chunk_events.rs  chunk_mqtt.rs  chunk_tests.rs  chunk_types.rs  chunked_voxel_world.rs  environment_helpers.rs  environment_systems.rs  environment_types.rs  mod.rs
desktop-client/src/fonts/: font_resource.rs  font_systems.rs  mod.rs
desktop-client/src/input/: gamepad.rs  gamepad_config.rs  gamepad_plugin.rs  mod.rs
desktop-client/src/interaction/: interaction_systems.rs  interaction_types.rs  mod.rs
desktop-client/src/inventory/: inventory_commands.rs  inventory_commands_backup.rs  inventory_params.rs  inventory_params_backup.rs  inventory_systems.rs  inventory_types.rs  mod.rs
desktop-client/src/localization/: localization_bundle.rs  localization_resource.rs  localization_systems.rs  localization_types.rs  mod.rs
desktop-client/src/mcp/: mcp_commands.rs  (+7 more)
desktop-client/tests/: desktop_block_sync_test.rs  mcp_integration_tests.rs  mqtt_block_sync_test.rs  mqtt_live_world_discovery_test.rs  mqtt_test_utils.rs  mqtt_world_discovery_test.rs  player_id_cli_integration_test.rs  simple_mqtt_test.rs  standalone_mqtt_discovery.rs
desktop-client/web/: debug.html  index.html
desktop-client/xtask/: Cargo.toml
desktop-device-client/: Cargo.toml  README.md
desktop-device-client/src/: main.rs  tests.rs
esp32-c3-devkit-rust-1/: Cargo.toml  diagram.json  wokwi.toml
esp32-c3-devkit-rust-1/.cargo/: config.toml
esp32-c6-client/: Cargo.toml  partitions.csv
esp32-c6-client/.cargo/: config.toml
esp32-c6-client/src/: main.rs
esp32-s3-box-3/: Cargo.toml  build.rs
esp32-s3-box-3/ui/: thermo.slint
esp32-s3-dhcp-gw/: Cargo.toml
iotcraft-gateway/main/: CMakeLists.txt  esp32-dhcp-server.c  idf_component.yml  iotcraft_gateway.h  iotcraft_http.c  iotcraft_mdns.c  iotcraft_mqtt.c  iotcraft_status_gui.c
iotcraft-mcp-bridge/: Cargo.toml  README.md
iotcraft-mcp-bridge/src/: main.rs
iotcraft-mcp-protocol/: Cargo.toml  README.md
iotcraft-mcp-protocol/src/: lib.rs  protocol.rs  tools.rs  types.rs  validation.rs
mcplay/: Cargo.toml  README.md
mcplay/scenarios/: README_cross_platform_testing.md  alice_bob_block_test.ron  alice_bob_ingame_transition_test.ron  alice_bob_interactive_multiplayer_test.ron  alice_bob_inventory_independent_test.ron  alice_bob_inventory_test.ron  alice_bob_medieval_multiplayer.ron  alice_bob_multiplayer_playtest.ron  alice_bob_multiplayer_sync_test.ron  alice_bob_world_sharing_test.ron  alice_bob_world_sharing_with_block_verification.ron  alice_desktop_bob_wasm.ron  alice_desktop_bob_wasm_automated.ron  alice_desktop_bob_wasm_visual.ron  alice_iterative_block_test.ron  alice_medieval_bob_multiplayer_test.ron  alice_medieval_bob_practical.ron  alice_medieval_bob_wasm_automated.ron  alice_medieval_debug.ron  alice_medieval_gameplay_demo.ron  alice_medieval_gameplay_modified.ron  alice_medieval_world_test.ron  alice_mqtt_simple_validation.ron  alice_publish_validation.ron  alice_world_discovery_validation.ron  alice_world_info_publishing_test.ron  alice_world_publish_debug.ron  alice_world_publish_enhanced.ron  alice_world_publish_simple.ron  alice_world_status_test.ron  async_mqtt_validation.ron  block_interaction_test.ron  check_available_tools.ron  comprehensive_fast_test.ron  create_world_and_wait.ron  debug_alice_world.ron  debug_block_placement.ron  debug_client_startup.ron  debug_default_world_creation.ron  debug_mcp_responses.ron  (+50 more)
mcplay/src/: lib.rs  log_collector.rs  main.rs  scenario_types.rs
mqtt-client/: Cargo.toml
mqtt-client/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+131 files in other folders)
