[package]
edition = "2024"
name    = "iotcraft-esp32-c3-devkit-rust-1"
version = "0.1.0"

[[bin]]
name = "iotcraft-esp32-c3-devkit-rust-1"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32c3", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
esp-println = { version = "0.14.0", features = ["log-04", "esp32c3"] }
log = "0.4.27"
embedded-hal = "1.0.0"
rust-mqtt = { version = "0.3.0", default-features = false }
embassy-sync = "0.7.0"
esp-hal-smartled = { git = "https://github.com/jamessizeland/esp-hal-community-fork.git", rev= "d709818" }
smart-leds = "0.4.0"
embassy-futures = "0.1.1"
embedded-hal-bus = "0.3.0"
shtcx = { version = "1.0.0" }



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
