[package]
name = "iotcraft-esp32-c6-client"
version = "0.1.0"
edition = "2024"

# This project is standalone and not part of the main IoTCraft workspace
# due to its embedded target requirements
[workspace]

[dependencies]

esp-hal = { version = "1.0.0", features = [
    "unstable",
] }
esp-alloc = { version = "0.9.0" }

esp-rtos = { version = "0.2.0", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32c6",
] }

esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32c6",
    "smoltcp",
    "unstable",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
heapless = { version = "0.9.1", default-features = false }
static_cell = "2.1.1"

embassy-executor = { version = "0.9.1", features = [] }
embassy-sync = "0.7.0"
embassy-net = { version = "0.7.1", features = ["dhcpv4", "medium-ethernet", "tcp", "udp"] }
embassy-time = "0.5.0"
embassy-futures = "0.1.1"
embedded-io-async = "0.7.0"
esp-println = { version = "0.16.1", optional = true, features = ["log-04"] }

# Graphic interface
esp-bsp = { version = "0.4.1", optional = true }
embedded-graphics = { version = "0.8.0", optional = true }
embedded-hal = "1.0.0"
esp-hal-smartled = { path = "/Users/georgik/projects/esp-hal-community/esp-hal-smartled", optional = true }
smart-leds = "0.4.0"
#rumqttc = { version = "0.24.0", default-features = false }
rust-mqtt = { version = "0.3.0", default-features = false }
# Using embedded-mqtt for no_std support instead of rumqttc
#embedded-mqtt = { version = "0.8.0", default-features = false }
log = "0.4.27"

# Storage and serialization
esp-storage = { version = "0.8.1", features = ["esp32c6"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
embedded-storage = "0.3.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

[features]
#default = [ "esp32-s3-headless" ]
#default = [ "esp32-s3-box" ]
default = [ "esp32-c6-devkitc-1" ]
#default = [ "waveshare-esp32-c6-lcd-1-47" ]

psram = []
neopixel = [ "esp-hal-smartled/esp32c6" ]

esp32c6 = [ "esp-hal/esp32c6", "esp-radio/esp32c6", "esp-println/esp32c6", "esp-rtos/esp32c6"]

esp32-c6-devkitc-1-no-neopixel = [ "esp32c6" ]
esp32-c6-devkitc-1 = [ "esp32c6", "neopixel" ]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
