[package]
edition = "2024"
name    = "iotcraft-esp32-s3-box-3"
version = "0.1.0"

[[bin]]
name = "iotcraft-esp32-s3-box-3"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-hal          = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }

slint = { git = "https://github.com/slint-ui/slint.git", rev = "8131481", default-features = false, features = [ "compat-1-2" ] }
mcu-board-support = { git = "https://github.com/slint-ui/slint.git", rev = "8131481", features = ["esp32-s3-box-3"] }
log = "0.4.27"

[build-dependencies]
slint-build =  { git = "https://github.com/slint-ui/slint.git", rev = "8131481" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
