[package]
edition = "2021"
name    = "esp32-s3-dhcp-gw"
version = "0.1.0"

[[bin]]
name = "esp32-s3-dhcp-gw"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"], default-features = false }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3", "executors"], default-features = false }
esp-wifi = { version = "0.15.0", features = ["builtin-scheduler", "esp-alloc", "esp32s3", "smoltcp", "wifi"], default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
edge-dhcp = { version = "0.6.0", default-features = false, features = ["io", "embassy-time"] }
edge-nal-embassy = { version = "0.6.0", default-features = false, features = ["udp"] }
heapless = { version = "0.8.0", default-features = false }
esp-println = { version = "0.15.0", default-features = false, features = ["esp32s3", "log-04", "uart"] }
cfg-if = { version = "1.0.1", default-features = false }
edge-nal = { version = "0.5.0", default-features = false }
log = { version = "0.4.27", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
