[package]
name = "iotcraft-mcp-bridge"
version = "0.1.0"
edition = "2021"
description = "MCP bridge for connecting Warp terminal to IoTCraft desktop client"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
