[package]
name = "iotcraft-mcp-protocol"
version = "0.1.0"
edition = "2021"
description = "Shared MCP protocol definitions for IoTCraft desktop client and mcplay"
authors = ["IoTCraft Team"]
license = "MIT OR Apache-2.0"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional features for validation and utilities
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

[lib]
name = "iotcraft_mcp_protocol"
