[package]
name = "iotcraft-mqtt-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mqtt-client"
path = "src/main.rs"

[[bin]]
name = "mqtt-observer"
path = "src/bin/mqtt-observer.rs"

[dependencies]
#bevy = "0.16.1"
rumqttc = "0.24.0"
#rumqttd = "0.19.0"
tokio = { version = "1.45.1", features = ["full"] }
config = "0.15.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
