[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
which = "6.0"
qr2term = "0.3"
if-addrs = "0.14"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
