[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
warp = { version = "0.4.2", features = ["compression", "server"] }
qr2term = "0.3"
